Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Sep-2011 Mark Dexter
 + Added system test for path disclosure security issue

12-Sep-2011 Mark Dexter
 # Fix system test for change in sample data module positions

23-Aug-2011 Mark Dexter
 # Fix system test for h3 tag change

09-Jul-2011 Mark Dexter
 # Fix system test for changed message

06-Jul-2011 Mark Dexter
 ^ Force test db prefix to jos_ 

04-Jul-2011 Mark Dexter
 # Fix failing system test

28-Jun-2011 Mark Dexter
 # Fix system tests for issue 23125

27-Jun-2011 Mark Dexter
 + Add security0001Test to test some xss fixes

20-Jun-2011 Mark Dexter
 # Fix unit test JFilterInput to run correctly

06-Jun-2011 Mark Dexter
 # Fix doInstall for AJAX changes made to installation screens
 ^ Modify SeleniumJoomlaTestCase to check for PHP warnings as well as notices

30-May-2011 Mark Dexter
 # Fix failing system test from change in bluestork template

17-May-2011 Christophe Demko
 # [#25894] *Fatal Error: JDocumentFeed disabled (Jean-Marie Simonet)

14-May-2011 Christophe Demko
 # [#25772] Librairie JDate translates month and day strings for RFC822 format which is not correct

04-May-2011 Mark Dexter
# Fix redirect test

18-Apr-2011 Mark Dexter
+ System test for redirect component

02-Apr-2011 Mark Dexter
# Fix doInstall to set error reporting to Maximum

31-Mar-2011 Mark Dexter
+ [#22618] Automated ACL system test to test manage permission (Tim Plummer)

23-Mar-2011 Mark Dexter
# [#25359] Fix failing unit test for JDocumentRenderRSS

16-Mar-2011 Mark Dexter
# [#25286] Fix failing unit test for JDocument (Rouven Weßling)
# [#25301] Xcache can not be tested using phpunit (Rouven Weßling)
# [#25348] Add more unit tests for JURI (Rouven Weßling)

18-Feb-2011 Mark Dexter